# cmu-keystroke-dataset

./: README.md  pyproject.toml  train.py
27135000/: email_userInformation.xlsx  fullname_userInformation.xlsx  phone_userInformation.xlsx
notebooks/: keystroke_dynamics_walkthrough.ipynb
results/: results_summary.csv
src/keystroke_dynamics/: __init__.py  detectors.py  evaluation.py  model.py
