[project]
name = "keystroke-dynamics"
version = "0.1.0"
description = "Behavioral biometrics: keystroke-dynamics anomaly detection evaluated on the CMU benchmark (Killourhy & Maxion, 2009)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/keystroke_dynamics"]
